# funding_agent

./: .gitignore  README.md  app.py  clean_data.py  clean_funding_data.py  clone_db_now.py  combine_funding_data.py  database.py  filter_funding_data.py  funding_data_augmented.json  funding_scrape.py  load_techcrunch_to_db.py  merge_augmented_data.py  pyproject.toml  rag_agent.py  requirements.txt  run_db.py  scraped_one.json  scraper.py  techcrunch_fundraising_scraper.py  unicorn_augmenter.py  update_incomplete_records.py  url_scraper.py
config/: settings.py
hooks/: __init__.py  config.json  diff_utils.py  edit_hook.py  edit_session.py
services/: advice_eval.json  advice_harness.py  advice_workflow.py  article_processor.py  categorizer_service.py  classify_harness.py  data_service.py  database.py  hackernews_service.py  huggingface_data.py  model_records_database.py  open_source_data.py  open_source_data_service.py  open_source_langgraph.py  orchestrator_workflow.py  process_the_scrape.py  rag_service.py  rag_service_agent.py  rag_service_agent_harness.py  rag_service_og.py  research_harness.py  research_workflow.py  research_workflow_harness.py  scraper_service.py  sector_agent.py  sector_harness.py  tasks.md  techcrunch_minimal.json  techcrunch_minimal.py  web_search_harness.py
services/agents/: __init__.py  agentRAG.py  agent_007.py  agent_blog_data_struct.py  is_funding_agent.py  (+2 more)
ui/: __init__.py  components.py  mongodb_helpers.py  styles.py
views/: __init__.py  funding.py  hackernews.py  home.py  huggingface.py  mongodb.py  opensource.py  research.py
(+59 files in other folders)
